<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.acceso.AccesoActivity" android:orientation="vertical"
        android:padding="5dp">
    <TextView
            android:text="@string/bienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono" android:id="@+id/txt_num"
                android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasenia" android:id="@+id/txt_pass"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/acceso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="acceso"/>
    <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="¿No tienes una cuenta?"
            android:textAlignment="center"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registro"/>
</LinearLayout>